--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -16,7 +16,7 @@
         <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="../StudyPage/builder.html">Builder</a></li>
             <li class="nav-item"><a class="nav-link" href="../ProfilePage/profile.html">Profile</a></li>
-            <li class="nav-item"><a class="nav-link text-warning" href="../Auth/signin.html">Logout</a></li>
+            <li class="nav-item"><a class="nav-link text-warning" href="../StarterPage/login.html">Logout</a></li>
         </ul>
     </div>
 </nav>
