--- a/StudyPage/builder.html
+++ b/StudyPage/builder.html
@@ -31,9 +31,7 @@
             <div class="day-col">Thursday</div>
             <div class="day-col">Friday</div>
         </div>
-
-        <div id="timetable-grid" class="grid">
-        </div>
+        <div id="timetable-grid" class="grid"></div>
     </div>
 
     <div class="add-module mt-5">
@@ -43,7 +41,7 @@
                 <input type="text" id="moduleName" class="form-control" placeholder="Module Name" required />
             </div>
             <div class="col-md-4">
-                <input type="text" id="moduleTime" class="form-control" placeholder="Time Slot (e.g. 09:00-10:00)" required />
+                <input type="text" id="moduleTime" class="form-control" placeholder="Time Slot (e.g. 09:00-11:00)" required />
             </div>
             <div class="col-md-3">
                 <select id="moduleDay" class="form-select" required>
@@ -62,7 +60,12 @@
     </div>
 </div>
 
-<!-- Edit Module Modal -->
+<!-- Print button -->
+<div class="builder-actions" style="margin: 20px; text-align: right;">
+    <button id="printBuilderBtn">Print / Export Timetable</button>
+</div>
+
+<!-- Edit module modal -->
 <div id="editModal" class="modal hidden">
     <div class="modal-content">
         <h3>Edit Module</h3>
@@ -72,28 +75,32 @@
 
             <label for="editDay">Day:</label>
             <select id="editDay">
-                <option>Monday</option>
-                <option>Tuesday</option>
-                <option>Wednesday</option>
-                <option>Thursday</option>
-                <option>Friday</option>
+                <option>Monday</option><option>Tuesday</option><option>Wednesday</option>
+                <option>Thursday</option><option>Friday</option>
             </select>
 
-            <label for="editHour">Time (hour):</label>
-            <select id="editHour">
+            <label for="editStart">Start Hour:</label>
+            <select id="editStart">
                 <option>8</option><option>9</option><option>10</option><option>11</option>
                 <option>12</option><option>13</option><option>14</option><option>15</option>
-                <option>16</option><option>17</option>
+                <option>16</option>
+            </select>
+
+            <label for="editEnd">End Hour:</label>
+            <select id="editEnd">
+                <option>9</option><option>10</option><option>11</option><option>12</option>
+                <option>13</option><option>14</option><option>15</option><option>16</option>
+                <option>17</option>
             </select>
 
             <div class="modal-buttons">
-                <button type="submit">Save Changes</button>
+                <button type="submit" id="saveChanges">Save Changes</button>
+                <button type="button" id="deleteModule" class="danger">Delete</button>
                 <button type="button" id="cancelEdit">Cancel</button>
             </div>
         </form>
     </div>
 </div>
-
 
 <footer class="text-center py-3 bg-light border-top">
     © 2025 University Timetable Manager
