--- a/StarterPage/login.html
+++ b/StarterPage/login.html
@@ -10,7 +10,7 @@
 <body>
 <div class="login-container">
     <h2>Sign In</h2>
-    <form id="loginForm" method="POST" action="backend/login.php">
+    <form id="loginForm" method="POST" action="../backend/login.php">
         <div class="form-group">
             <label for="email">Email Address</label>
             <input type="email" id="email" name="email" placeholder="Enter your email" required />
