--- a/StarterPage/signup.html
+++ b/StarterPage/signup.html
@@ -11,7 +11,7 @@
 <div class="signup-container">
     <h2>Create an Account</h2>
 
-    <form id="signupForm" method="POST" action="backend/register.php">
+    <form id="signupForm" method="POST" action="../backend/register.php">
         <div class="form-group">
             <label for="fullname">Full Name</label>
             <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" required />
