--- a/StudyPage/builder.html
+++ b/StudyPage/builder.html
@@ -12,7 +12,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
     <div class="container">
-        <a class="navbar-brand fw-bold" href="../HomePage/index.html">Timetable Manager</a>
+        <a class="navbar-brand fw-bold" href="../HomePage/home.php">Timetable Manager</a>
         <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="../ProfilePage/profile.html">Profile</a></li>
             <li class="nav-item"><a class="nav-link text-warning" href="../Auth/signin.html">Logout</a></li>
