--- a/StudyPage/builder.html
+++ b/StudyPage/builder.html
@@ -14,7 +14,7 @@
     <div class="container">
         <a class="navbar-brand fw-bold" href="../HomePage/home.php">Timetable Manager</a>
         <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="../ProfilePage/profile.html">Profile</a></li>
+            <li class="nav-item"><a class="nav-link" href="../ProfilePage/profile.php">Profile</a></li>
             <li class="nav-item"><a class="nav-link text-warning" href="../Auth/signin.html">Logout</a></li>
         </ul>
     </div>
